adding title and changing styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <option selected value="">All Department</option>
                     <option value="">Arts & crafts</option>
                 </select>
-                <input type="text" placeholder="Search Amazon" class="search-input">
+
+                <input type="text" placeholder="Search Amazon" title="search" class="search-input">
                 <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
